# experimental-huggingface

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
llama.cpp/: Dockerfile  pyproject.toml
llama.cpp/scripts/: setup.sh
llama.cpp/scripts/docker/: start.sh
scripts/: setup.sh
scripts/docker/: setup.sh  start.sh
src/experimental_huggingface/: phi3.py  zephyr.py
src/experimental_llama_cpp/: server.py
src/experimental_lllama_cpp/: server.py
src/experimental_llm_agent/: llama.py
tests/: test-prompt.py  test_server_prompt.py
